# SDLproject

./: README.md  build.gradle  local.properties
app/: build.gradle
app/jni/: Application.mk
app/jni/src/: Android.mk  CMakeLists.txt  game.cpp  game.h  renderer.cpp  renderer.h
gradle/wrapper/: gradle-wrapper.properties
